--- a/La casa de Toño/Cube.html
+++ b/La casa de Toño/Cube.html
@@ -720,11 +720,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i5.i24.text.css:text/base/css*/
 #i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
 /*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
-#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 262px; height: 63px;
-        -ms-transform: translate(-50%, -50%) translate(-7px, 90px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-7px, 90px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-7px, 90px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-7px, 90px) rotate(0deg);
+#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 245px; height: 63px;
+        -ms-transform: translate(-50%, -50%) translate(0px, 90px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 90px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 90px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 90px) rotate(0deg);
 }
 /*#/#*//*#i5.i58.image.css:image/base/css*/
 #i58 { opacity: 1; }
@@ -927,7 +927,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">¡Sabemos que todo se te antoja, disfrutar por pieza!</div>
+<div id="i24">¡Sabemos que todo se te antoja, ven La Casa de Toño!</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/w4OfF8Q.jpg"/>
 <!--#/#--><!--#i5.i338.image.html:image/html-->
