--- a/La casa de Toño/Venetian.html
+++ b/La casa de Toño/Venetian.html
@@ -2237,11 +2237,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i63.text.css:text/base/css*/
 #i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 19px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
-#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 194px; height: 85px;
-        -ms-transform: translate(0, 0) translate(63px, 259px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(63px, 259px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(63px, 259px) rotate(0deg);
-        transform: translate(0, 0) translate(63px, 259px) rotate(0deg);
+#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 290px; height: 85px;
+        -ms-transform: translate(0, 0) translate(16px, 259px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(16px, 259px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(16px, 259px) rotate(0deg);
+        transform: translate(0, 0) translate(16px, 259px) rotate(0deg);
 }
 /*#/#*//*#i91.image.css:image/base/css*/
 #i91 { opacity: 1; }
@@ -2332,10 +2332,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i30"></div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
-    <!--#i2.i5.slice-image.html:slice-image/html-->
+    <!--#i2.i6.slice-image.html:slice-image/html-->
+<dataimg id="i6" src="https://i.imgur.com/uk7kbCi.jpg"></dataimg>
+<!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
 <dataimg id="i5" src="https://i.imgur.com/DOvEvET.jpg"></dataimg>
-<!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/fIvFPlK.jpg"></dataimg>
 <!--#/#--><!--#i2.i76.slice-image.html:slice-image/html.1-->
 <dataimg id="i76" src="https://i.imgur.com/ZQAyARi.jpg"></dataimg>
 <!--#/#-->
@@ -2347,11 +2347,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/OMkBmYA.png"/>
 <!--#/#--><!--#i63.text.html:text/html-->
-<div id="i63">¡Sabemos que todo se te antoja!</div>
+<div id="i63">¡Desde 1986 sirviendo el mejor Pozole de México!</div>
 <!--#/#--><!--#i91.image.html:image/html-->
 <img id="i91" src="https://i.imgur.com/U8pbpmY.png"/>
 <!--#/#--><!--#i68.text.html:text/html-->
-<div id="i68">Recetas tradicionales que
+<div id="i68">No te pierdas las recetas tradicionales que
 han deleitado a generaciones enteras.</div>
 <!--#/#--><!--#i89.image.html:image/html-->
 <img id="i89" src="https://i.imgur.com/kZThkuS.png"/>
@@ -2411,9 +2411,9 @@ document.addEventListener('DOMContentLoaded', function() {
         setInterval(next, 5000);
 /*End Automatic Function*/
 });
-/*#/#*//*#i2.i5.slice-image.js:slice-image/base/js*/
-
 /*#/#*//*#i2.i6.slice-image.js:slice-image/base/js*/
+
+/*#/#*//*#i2.i5.slice-image.js:slice-image/base/js*/
 
 /*#/#*//*#i2.i76.slice-image.js:slice-image/base/js.1*/
 
@@ -2557,10 +2557,10 @@ data: /*!*/{}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
 name: Slice 1;
 customName: ;
+/*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
+name: uk7kbCi.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
 name: DOvEvET.jpg; fileId: ; sourceTypeId: externalUrl;
-/*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: fIvFPlK.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i76.slice-image.meta:slice-image/meta.1*/
 name: ZQAyARi.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
@@ -2582,7 +2582,7 @@ customName: 1;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i63.text.meta:text/meta*/
-name: ¡Sabemos que todo se te antoja!; customName: false;
+name: ¡Desde 1986 sirviendo el mejor Pozole de México!; customName: false;
 /*#/#*//*#i63.i64.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i91.image.meta:image/meta*/
@@ -2591,7 +2591,7 @@ customName: false;
 /*#/#*//*#i91.i92.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i68.text.meta:text/meta*/
-name: Recetas tradicionales que han deleitado a generaciones enteras.; customName: false;
+name: No te pierdas las recetas tradicionales que han deleitado a generaciones enteras.; customName: false;
 /*#/#*//*#i68.i69.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i89.image.meta:image/meta*/
