--- a/Seat/index300x600.html
+++ b/Seat/index300x600.html
@@ -226,13 +226,20 @@
         var porcent50 = Math.trunc(total * 0.50);
         var porcent75 = Math.trunc(total * 0.75);
 
+
         video.onclick = function() { // VIDEO PLAY Y VIDEO PAUSE
-            if (clickVideo == false) {
-                video.play();
-                clickVideo = true;
+            if (autoplay == 0) {
+                video.volume = 1;
+                autoplay = 1;
             } else {
-                video.pause();
-                clickVideo = false;
+                if (clickVideo == false) {
+                    video.play();
+                    video.volume = 1;
+                    clickVideo = true;
+                } else {
+                    video.pause();
+                    clickVideo = false;
+                }
             }
         }
 
@@ -240,6 +247,11 @@
             if (clickVideo == true) {
                 video.play();
             }
+        }
+
+        window.onload = function() {
+            video.volume = 0;
+            video.play();
         }
 
 
