--- a/Seat/index300x250.html
+++ b/Seat/index300x250.html
@@ -151,7 +151,7 @@
 
 <body>
     <content id="banner">
-        <video id="video" onmouseover="videoPause()" playsinline autoplay="true" muted>
+        <video id="video" onmouseover="videoPause()" playsinline>
             <source src="images/Maqueta_SuvSeat_30s_V5.mp4" type="video/mp4" />
             <source src="images/Maqueta_SuvSeat_30s_V5.webm" type="video/webm" />
             <source src="images/Maqueta_SuvSeat_30s_V5.ogg" type="video/ogg" />
