--- a/Decathlon/story-resize.html
+++ b/Decathlon/story-resize.html
@@ -407,12 +407,10 @@ Pero descuide, en la siguiente guía de acampada hemos reunido varios consejos p
 
 
                               <p><i>
-                               El diseño del tren de rodaje del nuevo Audi A1 Sportback ofrece una maniobrabilidad ágil y una experiencia de conducción deportiva. <br> 
-                               
-                                Además, es mucho más espacioso, lo que hace que la vida sea más cómoda para el conductor y el resto de pasajeros.
+                               Descubre todo para acampar en <b>Decathlon.</b>
                                 </i> </span><br>
 
-                          <!--      <div style="margin-top: 20px; margin-left: -20px;">
+                             <div style="margin-top: 20px; margin-left: -20px;">
                                 <iframe src="video1.html" width="307" height="202" frameborder="0" scrolling="no" position="absolute" style="margin-left: -8px; margin-top: -8px;"></iframe></div>
 
 
@@ -423,7 +421,7 @@ Pero descuide, en la siguiente guía de acampada hemos reunido varios consejos p
 
 
 
-                          <span class="bzm_text_title  bzm_text_medium" style="display:block;color:#8b8b8b; margin-left:0px; text-align: justify; margin-top: 17px;">
+                        <!--     <span class="bzm_text_title  bzm_text_medium" style="display:block;color:#8b8b8b; margin-left:0px; text-align: justify; margin-top: 17px;">
                 <i><strong>4.</strong><i><b>CONTENIDO NUTRICIONAL</b><p style="color:#8b8b8b">Los primeros años de vida son los que determinan la salud de nuestros hijos a futuro. Es importante ofrecerles alimentos con nutrientes esenciales que cubran su desarrollo mental <b>como el DHA , AA (ARA) y hierro, físico como la vitamina A y el calcio, inmunológico como la vitamina E y el zinc, y fibra como la oligofructosa</b> que contribuye a una buena <b>tolerancia de su sistema digestivo.</b></p>
                 </br></br><p style="color:#000"><strong>Una gran opción a considerar es Progress ALULA Gold Perú, con nueva presentación y fórmula mejorada, que contiene Alfa-lact*, 100% lactosa y no cuenta con azúcares añadidos como fructosa, sacarosa y sólidos de jarabe de maíz. Busquemos lo mejor para el crecimiento saludable de nuestros hijos.</b></strong></p></i> <br> </span>
                 <br> -->
@@ -434,16 +432,16 @@ Pero descuide, en la siguiente guía de acampada hemos reunido varios consejos p
                             <div style="text-align:right; background-color:white; background-size:25px; height:5px;margin-left: 3px; margin-top: 30px; margin-bottom: 30px;">
                                 <span>
 
-                                    <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.decathlon.com.mx/search?controller=search&orderby=position&orderway=desc&search_query=camping&submit_search=" target="block"><img alt="Facebook" class="facebooki" src="https://i.imgur.com/Op9g79c.png" title="Facebook" style="height: 25px; " />
+                                    <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.decathlon.com.mx/search?controller=search&orderby=position&orderway=desc&search_query=camping&submit_search=" target="block"><img alt="Facebook" class="facebooki" src="https://i.imgur.com/FVeBXv8.png" title="Facebook" style="height: 25px; " />
                                     </a>
 
 
-                                    <a class="shared" href="whatsapp://send?text=Mira lo que he encontrado https://www.decathlon.com.mx/search?controller=search&orderby=position&orderway=desc&search_query=camping&submit_search=" target="_blank"> <img alt="compartir en Whatssap" class="whatsappi" src="https://i.imgur.com/ln9omrS.png" title="compartir en Whatsapp" style="height: 25px; "  ></a>
+                                    <a class="shared" href="whatsapp://send?text=Mira lo que he encontrado https://www.decathlon.com.mx/search?controller=search&orderby=position&orderway=desc&search_query=camping&submit_search=" target="_blank"> <img alt="compartir en Whatssap" class="whatsappi" src="https://i.imgur.com/UlUjuu9.png" title="compartir en Whatsapp" style="height: 25px; "  ></a>
 
-                                    <a class="shared" href="https://twitter.com/home?status=https://www.decathlon.com.mx/search?controller=search&orderby=position&orderway=desc&search_query=camping&submit_search=" target="block"><img alt="Twitter" class="twitteri" src="https://i.imgur.com/R36K7AR.png" title="Twitter" style="height: 25px; " />
+                                    <a class="shared" href="https://twitter.com/home?status=https://www.decathlon.com.mx/search?controller=search&orderby=position&orderway=desc&search_query=camping&submit_search=" target="block"><img alt="Twitter" class="twitteri" src="https://i.imgur.com/D86cc2f.png" title="Twitter" style="height: 25px; " />
                                     </a>
 
-                                    <img class="final" src="https://i.imgur.com/zwOQRlk.png" style="height: 20px; margin-right: -20px; margin-top: 5px; float: right;">
+                                    <img class="final" src="https://i.imgur.com/Mw1OLsd.png" style="height: 20px; margin-right: -20px; margin-top: 5px; float: right;">
 
                                 </span>
                             </div>
