--- a/Decathlon/video1.html
+++ b/Decathlon/video1.html
@@ -289,7 +289,7 @@
                 ytplayer = new YT.Player('ytplayer', {
                     height: '200',
                     width: '305',
-                    videoId: 'iCQ0SA4Ap1Y',
+                    videoId: 'Bd5Cg6fvDI8',
                     autoplay: 1,
                     playerVars: {
                         loop: 1,
