--- a/La casa de Toño/Cube.html
+++ b/La casa de Toño/Cube.html
@@ -720,11 +720,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i5.i24.text.css:text/base/css*/
 #i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
 /*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
-#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 245px; height: 63px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 90px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 90px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 90px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 90px) rotate(0deg);
+#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 256px; height: 63px;
+        -ms-transform: translate(-50%, -50%) translate(-10px, 90px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(-10px, 90px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(-10px, 90px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(-10px, 90px) rotate(0deg);
 }
 /*#/#*//*#i5.i58.image.css:image/base/css*/
 #i58 { opacity: 1; }
@@ -824,10 +824,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i372 { opacity: 1; }
 /*#/#*//*#i372.i373.positioning.css:positioning/base/css.2*/
 #i372 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 40px; height: 40px;
-        -ms-transform: translate(0, 0) translate(114px, 187px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(114px, 187px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(114px, 187px) rotate(0deg);
-        transform: translate(0, 0) translate(114px, 187px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(111px, 194px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(111px, 194px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(111px, 194px) rotate(0deg);
+        transform: translate(0, 0) translate(111px, 194px) rotate(0deg);
 }
 /*#/#*//*#i6.i354.image.css:image/base/css*/
 #i354 { opacity: 1; }
@@ -842,10 +842,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i356 { opacity: 1; }
 /*#/#*//*#i356.i357.positioning.css:positioning/base/css.2*/
 #i356 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 150px; height: 30px;
-        -ms-transform: translate(0, 0) translate(73px, 144px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(73px, 144px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(73px, 144px) rotate(0deg);
-        transform: translate(0, 0) translate(73px, 144px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(73px, 157px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(73px, 157px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(73px, 157px) rotate(0deg);
+        transform: translate(0, 0) translate(73px, 157px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #dedede; opacity: 0.00;
@@ -927,7 +927,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">¡Sabemos que todo se te antoja, ven La Casa de Toño!</div>
+<div id="i24">¡Sabemos que todo se te antoja, ven a La Casa de Toño!</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/w4OfF8Q.jpg"/>
 <!--#/#--><!--#i5.i338.image.html:image/html-->
@@ -951,7 +951,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i370.image.html:image/html-->
 <img id="i370" src="https://i.imgur.com/HZZxGLM.jpg"/>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/yxw5vkS.jpg"/>
+<img id="i60" src="https://i.imgur.com/NcRGIH8.gif"/>
 <!--#/#--><!--#i6.i372.image.html:image/html-->
 <img id="i372" src="https://i.imgur.com/U8pbpmY.png"/>
 <!--#/#--><!--#i6.i354.image.html:image/html-->
