--- a/La casa de Toño/Venetian.html
+++ b/La casa de Toño/Venetian.html
@@ -2336,6 +2336,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <dataimg id="i6" src="https://i.imgur.com/uk7kbCi.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
 <dataimg id="i5" src="https://i.imgur.com/DOvEvET.jpg"></dataimg>
+<!--#/#--><!--#i2.i105.slice-image.html:slice-image/html.1-->
+<dataimg id="i105" src="https://i.imgur.com/v5WaeW8.jpg"></dataimg>
 <!--#/#--><!--#i2.i76.slice-image.html:slice-image/html.1-->
 <dataimg id="i76" src="https://i.imgur.com/ZQAyARi.jpg"></dataimg>
 <!--#/#-->
@@ -2414,6 +2416,8 @@ document.addEventListener('DOMContentLoaded', function() {
 /*#/#*//*#i2.i6.slice-image.js:slice-image/base/js*/
 
 /*#/#*//*#i2.i5.slice-image.js:slice-image/base/js*/
+
+/*#/#*//*#i2.i105.slice-image.js:slice-image/base/js.1*/
 
 /*#/#*//*#i2.i76.slice-image.js:slice-image/base/js.1*/
 
@@ -2561,6 +2565,9 @@ customName: ;
 name: uk7kbCi.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
 name: DOvEvET.jpg; fileId: ; sourceTypeId: externalUrl;
+/*#/#*//*#i2.i105.slice-image.meta:slice-image/meta.1*/
+name: v5WaeW8.jpg; fileId: ; sourceTypeId: externalUrl;
+customName: false;
 /*#/#*//*#i2.i76.slice-image.meta:slice-image/meta.1*/
 name: ZQAyARi.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
