--- a/Decathlon/Venetian320x480.html
+++ b/Decathlon/Venetian320x480.html
@@ -2292,14 +2292,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i70" src="https://i.imgur.com/kZThkuS.png"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
-    <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/Tw2E1Su.jpg"></dataimg>
-<!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/pNZ1kYU.gif"></dataimg>
+    <!--#i2.i72.slice-image.html:slice-image/html.1-->
+<dataimg id="i72" src="https://i.imgur.com/3TYvPaO.jpg"></dataimg>
 <!--#/#--><!--#i2.i37.slice-image.html:slice-image/html.1-->
 <dataimg id="i37" src="https://i.imgur.com/xbIfCRk.jpg"></dataimg>
-<!--#/#--><!--#i2.i72.slice-image.html:slice-image/html.1-->
-<dataimg id="i72" src="https://i.imgur.com/3TYvPaO.jpg"></dataimg>
+<!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
+<dataimg id="i5" src="https://i.imgur.com/pNZ1kYU.gif"></dataimg>
+<!--#/#--><!--#i2.i4.slice-image.html:slice-image/html-->
+<dataimg id="i4" src="https://i.imgur.com/Tw2E1Su.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i16.image.html:image/html-->
@@ -2339,7 +2339,7 @@ document.addEventListener('DOMContentLoaded', function() {
         autoRotationEnabled: 'true',
         autoRotationDelay: '3',
         autoRotationTimeout: '25',
-        shadow: 'rgba(99,235,104,1)',
+        shadow: 'rgba(61,98,227,1)',
         perspective: '500',
         useSinglePerspective: 'false',
         useOffsetCompensation: 'true',
@@ -2362,13 +2362,13 @@ document.addEventListener('DOMContentLoaded', function() {
         setInterval(next, 5000);
 /*End Automatic Function*/
 });
-/*#/#*//*#i2.i4.slice-image.js:slice-image/base/js*/
-
-/*#/#*//*#i2.i5.slice-image.js:slice-image/base/js*/
+/*#/#*//*#i2.i72.slice-image.js:slice-image/base/js.1*/
 
 /*#/#*//*#i2.i37.slice-image.js:slice-image/base/js.1*/
 
-/*#/#*//*#i2.i72.slice-image.js:slice-image/base/js.1*/
+/*#/#*//*#i2.i5.slice-image.js:slice-image/base/js*/
+
+/*#/#*//*#i2.i4.slice-image.js:slice-image/base/js*/
 
 /*#/#*//*#i16.image.js:image/base/js*/
 
@@ -2471,16 +2471,16 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
 name: Slice 1;
 customName: ;
-/*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: Tw2E1Su.jpg; fileId: ; sourceTypeId: externalUrl;
-/*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: pNZ1kYU.gif; fileId: ; sourceTypeId: externalUrl;
-/*#/#*//*#i2.i37.slice-image.meta:slice-image/meta.1*/
-name: xbIfCRk.jpg; fileId: ; sourceTypeId: externalUrl;
-customName: false;
 /*#/#*//*#i2.i72.slice-image.meta:slice-image/meta.1*/
 name: 3TYvPaO.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
+/*#/#*//*#i2.i37.slice-image.meta:slice-image/meta.1*/
+name: xbIfCRk.jpg; fileId: ; sourceTypeId: externalUrl;
+customName: false;
+/*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
+name: pNZ1kYU.gif; fileId: ; sourceTypeId: externalUrl;
+/*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
+name: Tw2E1Su.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
