--- a/Decathlon/Cube.html
+++ b/Decathlon/Cube.html
@@ -633,13 +633,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 285px; height: 35px;
-        -ms-transform: translate(-50%, -50%) translate(1px, 78px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(1px, 78px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(1px, 78px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(1px, 78px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 63px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 63px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 63px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 63px) rotate(0deg);
 }
 /*#/#*//*#i4.i130.image.css:image/base/css*/
 #i130 { opacity: 1; }
@@ -649,15 +649,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i4.i286.image.css:image/base/css*/
-#i286 { opacity: 1; }
-/*#/#*//*#i286.i287.positioning.css:positioning/base/css.2*/
-#i286 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 139px; height: 36px;
-        -ms-transform: translate(0, 0) translate(78px, 140px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(78px, 140px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(78px, 140px) rotate(0deg);
-        transform: translate(0, 0) translate(78px, 140px) rotate(0deg);
 }
 /*#/#*//*#i4.i181.image.css:image/base/css*/
 #i181 { opacity: 1; }
@@ -718,13 +709,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i5.i24.text.css:text/base/css*/
-#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
+#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
 /*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
 #i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 249px; height: 33px;
-        -ms-transform: translate(-50%, -50%) translate(-4px, 75px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-4px, 75px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-4px, 75px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-4px, 75px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 66px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 66px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 66px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 66px) rotate(0deg);
 }
 /*#/#*//*#i5.i58.image.css:image/base/css*/
 #i58 { opacity: 1; }
@@ -734,15 +725,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i5.i338.image.css:image/base/css*/
-#i338 { opacity: 1; }
-/*#/#*//*#i338.i339.positioning.css:positioning/base/css.2*/
-#i338 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 139px; height: 36px;
-        -ms-transform: translate(0, 0) translate(78px, 140px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(78px, 140px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(78px, 140px) rotate(0deg);
-        transform: translate(0, 0) translate(78px, 140px) rotate(0deg);
 }
 /*#/#*//*#i5.i340.image.css:image/base/css*/
 #i340 { opacity: 1; }
@@ -803,13 +785,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i6.i34.text.css:text/base/css*/
-#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 16px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
+#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
 #i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 239px; height: 41px;
-        -ms-transform: translate(-50%, -50%) translate(-2px, 80px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-2px, 80px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-2px, 80px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-2px, 80px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 69px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 69px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 69px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 69px) rotate(0deg);
 }
 /*#/#*//*#i6.i60.image.css:image/base/css*/
 #i60 { opacity: 1; }
@@ -819,15 +801,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i6.i358.image.css:image/base/css*/
-#i358 { opacity: 1; }
-/*#/#*//*#i358.i359.positioning.css:positioning/base/css.2*/
-#i358 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 139px; height: 36px;
-        -ms-transform: translate(0, 0) translate(78px, 140px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(78px, 140px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(78px, 140px) rotate(0deg);
-        transform: translate(0, 0) translate(78px, 140px) rotate(0deg);
 }
 /*#/#*//*#i6.i360.image.css:image/base/css*/
 #i360 { opacity: 1; }
@@ -899,8 +872,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i14">Innovamos para sacar el mayor potencial de tu práctica deportiva.</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/Iw5WQAD.gif"/>
-<!--#/#--><!--#i4.i286.image.html:image/html-->
-<img id="i286" src="https://i.imgur.com/81kZvCD.png"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
 <img id="i181" src="https://i.imgur.com/Mw1OLsd.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
@@ -921,8 +892,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i24">Nuestra Máscara EasyBreath es ideal para iniciar snorkeling.</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/bbt5qYU.jpg"/>
-<!--#/#--><!--#i5.i338.image.html:image/html-->
-<img id="i338" src="https://i.imgur.com/81kZvCD.png"/>
 <!--#/#--><!--#i5.i340.image.html:image/html-->
 <img id="i340" src="https://i.imgur.com/Mw1OLsd.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
@@ -943,8 +912,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i34">¡Una habitación natural para compartir entre amigos!</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/T1SUErB.jpg"/>
-<!--#/#--><!--#i6.i358.image.html:image/html-->
-<img id="i358" src="https://i.imgur.com/81kZvCD.png"/>
 <!--#/#--><!--#i6.i360.image.html:image/html-->
 <img id="i360" src="https://i.imgur.com/Mw1OLsd.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
@@ -996,10 +963,6 @@ document.getElementById('i2').addEventListener('showNext', function(e){
 });
 /*#/#*//*#i4.i130.image.js:image/base/js*/
 
-/*#/#*//*#i4.i286.image.js:image/base/js*/
-
-/*#/#*//*#i286.i287.positioning.js:positioning/base/js.2*/
-bmShow('i286');
 /*#/#*//*#i4.i181.image.js:image/base/js*/
 
 /*#/#*//*#i181.i182.positioning.js:positioning/base/js.2*/
@@ -1044,7 +1007,7 @@ var el = document.getElementById('i228');
 
 el.addEventListener('click', function(e){
     /*#i292.i293.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.decathlon.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.decathlon.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1075,10 +1038,6 @@ if ('click' === 'click') {
 
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
-/*#/#*//*#i5.i338.image.js:image/base/js*/
-
-/*#/#*//*#i338.i339.positioning.js:positioning/base/js.2*/
-bmShow('i338');
 /*#/#*//*#i5.i340.image.js:image/base/js*/
 
 /*#/#*//*#i340.i341.positioning.js:positioning/base/js.2*/
@@ -1123,7 +1082,7 @@ var el = document.getElementById('i346');
 
 el.addEventListener('click', function(e){
     /*#i348.i349.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.decathlon.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.decathlon.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1167,10 +1126,6 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i6.i358.image.js:image/base/js*/
-
-/*#/#*//*#i358.i359.positioning.js:positioning/base/js.2*/
-bmShow('i358');
 /*#/#*//*#i6.i360.image.js:image/base/js*/
 
 /*#/#*//*#i360.i361.positioning.js:positioning/base/js.2*/
@@ -1202,7 +1157,7 @@ var el = document.getElementById('i366');
 
 el.addEventListener('click', function(e){
     /*#i368.i369.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.decathlon.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.decathlon.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1267,11 +1222,6 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i130.i131.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i4.i286.image.meta:image/meta*/
-name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i286.i287.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i181.image.meta:image/meta*/
 name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
@@ -1311,11 +1261,6 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i338.image.meta:image/meta*/
-name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i338.i339.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i340.image.meta:image/meta*/
 name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
@@ -1354,11 +1299,6 @@ data: /*!*/{}/*!*/;
 name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i60.i61.positioning.meta:positioning/meta.1*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i6.i358.image.meta:image/meta*/
-name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i358.i359.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i360.image.meta:image/meta*/
 name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
