--- a/Seat/index300x250.html
+++ b/Seat/index300x250.html
@@ -146,6 +146,11 @@
         background-color: rgba(0, 0, 0, 0.5);
         cursor: pointer;
     }
+    
+    .h4IOS{
+        font-size: 16px !important;
+        letter-spacing: -0.1em !important;
+    }
 
 </style>
 
@@ -175,19 +180,19 @@
         <div id="bn1" class="banner display-off" onclick="window.open('https://www.seat.mx/autos/arona/descubre.html', '_blank');">
             <center>
                 <h4>Arona</h4>
-                <button onclick="window.open('https://www.seat.mx/autos/arona/descubre.html', '_blank');">Llegó la hora de subir el volumen</button>
+                <button id="redirecBtn" class="" onclick="window.open('https://www.seat.mx/autos/arona/descubre.html', '_blank');">Llegó la hora de subir el volumen</button>
             </center>
         </div>
         <div id="bn2" class="banner display-off" onclick="https://www.seat.mx/autos/ateca/descubre.html', '_blank');">
             <center>
                 <h4>Ateca</h4>
-                <button onclick="window.open('https://www.seat.mx/autos/ateca/descubre.html', '_blank');">Una mirada de confianza</button>
+                <button id="redirecBtn" class="" onclick="window.open('https://www.seat.mx/autos/ateca/descubre.html', '_blank');">Una mirada de confianza</button>
             </center>
         </div>
         <div id="bn3" class="banner display-off" onclick="window.open('https://www.seat.mx/autos/tarraco/descubre.html', '_blank');">
             <center>
                 <h4>Tarraco</h4>
-                <button onclick="window.open('https://www.seat.mx/autos/tarraco/descubre.html', '_blank');">¿Por qué no ahora?</button>
+                <button id="redirecBtn" class="" onclick="window.open('https://www.seat.mx/autos/tarraco/descubre.html', '_blank');">¿Por qué no ahora?</button>
             </center>
         </div>
     </content>
@@ -280,6 +285,13 @@
         setInterval('min()', 1000);
 
     </script>
+
+<script type="text/javascript">
+if((navigator.userAgent.match(/iPhone/i)) || (navigator.userAgent.match(/iPod/i)) || (navigator.userAgent.match(/like Mac OS X/i))) {
+    document.getElementById("redirecBtn").classList.add('h4IOS');
+    console.log('bfseifb');
+}
+</script>
 </body>
 
 </html>
