--- a/CHEVRON 02/Venetian.html
+++ b/CHEVRON 02/Venetian.html
@@ -2335,7 +2335,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i2.i6.slice-image.html:slice-image/html-->
 <dataimg id="i6" src="https://i.imgur.com/8UnPHz9.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/coAo0T6.gif"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/C9hbu5T.gif"></dataimg>
 <!--#/#--><!--#i2.i105.slice-image.html:slice-image/html.1-->
 <dataimg id="i105" src="https://i.imgur.com/WAF0YZJ.jpg"></dataimg>
 <!--#/#-->
@@ -2351,7 +2351,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i91.image.html:image/html-->
 <img id="i91" src="https://i.imgur.com/BZ8jpp2.png"/>
 <!--#/#--><!--#i68.text.html:text/html-->
-<div id="i68">Conoce nuestra gasolina que contiene Techron® un avanzado sistema de limpieza formulado para remover depósitos.</div>
+<div id="i68">Conoce nuestra Gasolina que contiene Techron® un avanzado sistema de limpieza formulado para remover depósitos.</div>
 <!--#/#--><!--#i89.image.html:image/html-->
 <img id="i89" src="https://i.imgur.com/kZThkuS.png"/>
 <!--#/#--><!--#i81.shape.html:shape/html-->
@@ -2512,7 +2512,7 @@ var el = document.getElementById('i95');
 
 el.addEventListener('click', function(e){
     /*#i101.i102.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://goo.gl/maps/xozkYRhwyLpDykKP8'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
