--- a/CHEVRON 02/Cube.html
+++ b/CHEVRON 02/Cube.html
@@ -1066,7 +1066,7 @@ var el = document.getElementById('i228');
 
 el.addEventListener('click', function(e){
     /*#i292.i293.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://goo.gl/maps/xozkYRhwyLpDykKP8'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1145,7 +1145,7 @@ var el = document.getElementById('i392');
 
 el.addEventListener('click', function(e){
     /*#i394.i395.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://goo.gl/maps/xozkYRhwyLpDykKP8'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1232,7 +1232,7 @@ var el = document.getElementById('i396');
 
 el.addEventListener('click', function(e){
     /*#i398.i399.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://goo.gl/maps/xozkYRhwyLpDykKP8'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
