--- a/CHEVRON 02/Zoom.html
+++ b/CHEVRON 02/Zoom.html
@@ -182,7 +182,7 @@ a {text-decoration: none;}
       <img src="https://i.imgur.com/evFHDeN.gif">
       
     <li>
-      <img src="https://i.imgur.com/M06dd4s.gif">
+      <img src="https://i.imgur.com/PTgrgIe.gif">
       
     <li>
       <img src="https://i.imgur.com/dsvgbbN.jpg">
