--- a/CHEVRON 02/Cube.html
+++ b/CHEVRON 02/Cube.html
@@ -633,13 +633,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 18px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
-#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 191px; height: 63px;
-        -ms-transform: translate(-50%, -50%) translate(-1px, 97px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-1px, 97px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-1px, 97px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-1px, 97px) rotate(0deg);
+#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 241px; height: 63px;
+        -ms-transform: translate(-50%, -50%) translate(-3px, 98px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(-3px, 98px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(-3px, 98px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(-3px, 98px) rotate(0deg);
 }
 /*#/#*//*#i4.i130.image.css:image/base/css*/
 #i130 { opacity: 1; }
@@ -958,7 +958,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">La velocidad no será problema con el nuevo Huawei Nova4.</div>
+
 <!--#/#--><!--#i6.i424.image.html:image/html-->
 <img id="i424" src="https://i.imgur.com/ZjLyqsS.jpg"/>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
@@ -1066,7 +1066,7 @@ var el = document.getElementById('i228');
 
 el.addEventListener('click', function(e){
     /*#i292.i293.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://goo.gl/maps/xozkYRhwyLpDykKP8'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1145,7 +1145,7 @@ var el = document.getElementById('i392');
 
 el.addEventListener('click', function(e){
     /*#i394.i395.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://goo.gl/maps/xozkYRhwyLpDykKP8'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1232,7 +1232,7 @@ var el = document.getElementById('i396');
 
 el.addEventListener('click', function(e){
     /*#i398.i399.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://goo.gl/maps/xozkYRhwyLpDykKP8'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
