--- a/CHEVRON 02/Venetian.html
+++ b/CHEVRON 02/Venetian.html
@@ -2512,7 +2512,7 @@ var el = document.getElementById('i95');
 
 el.addEventListener('click', function(e){
     /*#i101.i102.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://goo.gl/maps/xozkYRhwyLpDykKP8'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
